--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="mainViewModel"
+            type="com.example.foodyclone.viewmodels.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,6 +48,8 @@
             android:alpha="0.5"
             android:src="@drawable/ic_sad"
             android:visibility="invisible"
+            readApiResponse="@{mainViewModel.recipesResponse}"
+            readDatabase="@{mainViewModel.readRecipes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +66,8 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="invisible"
+            readApiResponse2="@{mainViewModel.recipesResponse}"
+            readDatabase2="@{mainViewModel.readRecipes}"
             app:layout_constraintEnd_toEndOf="@+id/ivError"
             app:layout_constraintStart_toStartOf="@+id/ivError"
             app:layout_constraintTop_toBottomOf="@+id/ivError" />
