--- a/app/src/main/res/layout/recipes_bottom_sheet.xml
+++ b/app/src/main/res/layout/recipes_bottom_sheet.xml
@@ -247,7 +247,7 @@
         </com.google.android.material.chip.ChipGroup>
     </HorizontalScrollView>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/apply_button"
         android:layout_width="0dp"
         android:layout_height="60dp"
@@ -256,6 +256,8 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:text="@string/apply"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
