--- a/app/src/main/res/layout/recipes_row_layout.xml
+++ b/app/src/main/res/layout/recipes_row_layout.xml
@@ -14,7 +14,8 @@
         android:id="@+id/recipesRowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="4dp">
+        android:layout_marginVertical="4dp"
+        onRecipeClickListener="@{result}">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/row_cardView"
