--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -241,6 +241,7 @@
                     android:id="@+id/textSummary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
                     android:text="Description"
                     android:textSize="16sp" />
             </LinearLayout>
