--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/menu_details"
+        android:id="@+id/menu_save_to_favorites"
         android:icon="@drawable/ic_star"
         android:title="@string/save_to_favorites"
         android:iconTint="@color/white"
