--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="4dp"
-        onRecipeClickListener="@{result}">
+        onFavoriteRecipeClickListener="@{result}">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/row_cardView"
