--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -5,6 +5,13 @@
 
     <data>
 
+        <variable
+            name="mainViewModel"
+            type="com.example.foodyclone.viewmodels.MainViewModel" />
+
+        <variable
+            name="adapter"
+            type="com.example.foodyclone.adapters.FavoritesAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,6 +22,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/favoritesRecyclerView"
+            viewVisibility="@{mainViewModel.readFavoriteRecipes}"
+            setData="@{adapter}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
@@ -28,6 +37,7 @@
 
         <ImageView
             android:id="@+id/ivEmpty"
+            viewVisibility="@{mainViewModel.readFavoriteRecipes}"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:alpha="0.5"
@@ -42,11 +52,12 @@
 
         <TextView
             android:id="@+id/tvEmpty"
+            viewVisibility="@{mainViewModel.readFavoriteRecipes}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:alpha="0.5"
-            android:text="No Favorite Recipes"
+            android:text="@string/no_favorite_recipes"
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="invisible"
