--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -47,8 +47,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.37"
-            tools:visibility="visible" />
+            app:layout_constraintVertical_bias="0.37" />
 
         <TextView
             android:id="@+id/tvEmpty"
@@ -63,8 +62,7 @@
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="@+id/ivEmpty"
             app:layout_constraintStart_toStartOf="@+id/ivEmpty"
-            app:layout_constraintTop_toBottomOf="@+id/ivEmpty"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@+id/ivEmpty" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
