--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/favorite_row_cardView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -146,6 +146,6 @@
                     app:layout_constraintStart_toEndOf="@+id/favorite_clock_textView"
                     app:layout_constraintTop_toBottomOf="@+id/favorite_leaf_imageView" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
