--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="mainViewModel"
+            type="com.example.foodyclone.viewmodels.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
