--- a/app/src/main/res/menu/food_joke_menu.xml
+++ b/app/src/main/res/menu/food_joke_menu.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/food_joke_share_menu"
         android:icon="@drawable/ic_share"
         android:title="@string/share"
-        app:showAsAction="ifRoom"/>
+        android:iconTint="@color/white"
+        app:showAsAction="ifRoom"
+        tools:targetApi="o" />
 </menu>
